tests/invalid-syntax/64371_non_assoc_operator/non_assoc_operator.agu
-- Author: 64371, Ricardo Costa

let between(x, min, max): (Int, Int, Int) -> Bool =
    min < x < max -- syntax error: non associative operator '<'
